<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/slide"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Attended_Events"
    android:forceDarkAllowed="false"
    android:background="@drawable/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/events"
                android:contentDescription="@string/todo">

            </ImageView>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:fontFamily="@font/nb"
                android:text="@string/claim_reward_points"
                android:textColor="#0099FF"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView12" />

            <ImageView
                android:id="@+id/imageView28"
                android:layout_width="380dp"
                android:layout_height="330dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/student_details"
                android:drawablePadding="5dp"
                android:textSize="15dp"
                android:fontFamily="@font/nb"
                android:textColor="#0099FF"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toTopOf="@+id/imageView28" />


            <EditText
                android:id="@+id/name"
                android:layout_width="335dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_et"
                android:drawableStart="@drawable/custom_name"
                android:drawablePadding="8dp"
                android:textSize="18dp"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:fontFamily="@font/nl"
                app:layout_constraintEnd_toEndOf="@+id/imageView28"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/imageView28"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                android:autofillHints="" />

            <EditText
                android:id="@+id/mail"
                android:layout_width="335dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_et"
                android:drawableStart="@drawable/custom_mail"
                android:drawablePadding="8dp"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="18dp"
                android:fontFamily="@font/nr"
                app:layout_constraintEnd_toEndOf="@+id/imageView28"
                app:layout_constraintStart_toStartOf="@+id/imageView28"
                app:layout_constraintTop_toBottomOf="@+id/name"
                android:autofillHints="" />

            <EditText
                android:id="@+id/roll"
                android:layout_width="163dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_et"
                android:drawableStart="@drawable/custom_id"
                android:drawablePadding="8dp"
                android:hint="@string/roll_no"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textSize="18dp"
                android:paddingEnd="10dp"
                android:fontFamily="@font/nr"
                app:layout_constraintEnd_toEndOf="@+id/imageView28"
                app:layout_constraintHorizontal_bias="0.013"
                app:layout_constraintStart_toStartOf="@+id/mail"
                app:layout_constraintTop_toBottomOf="@+id/mail"
                android:autofillHints="" />

            <Spinner
                android:id="@+id/dept"
                android:layout_width="335dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_et"
                android:entries="@array/department"
                android:textAlignment="center"
                android:textSize="18dp"
                android:fontFamily="@font/nb"
                app:layout_constraintEnd_toEndOf="@+id/imageView28"
                app:layout_constraintStart_toStartOf="@+id/imageView28"
                app:layout_constraintTop_toBottomOf="@+id/roll" />

            <ImageView
                android:id="@+id/imageView29"
                android:layout_width="375dp"
                android:layout_height="330dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView28"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/t2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/event_details"
                android:drawablePadding="5dp"
                android:textColor="#0099FF"
                android:textSize="15dp"
                android:fontFamily="@font/nb"
                app:layout_constraintEnd_toEndOf="@+id/imageView29"
                app:layout_constraintHorizontal_bias="0.085"
                app:layout_constraintStart_toStartOf="@+id/imageView29"
                app:layout_constraintTop_toTopOf="@+id/imageView29" />

            <EditText
                android:id="@+id/event"
                android:layout_width="335dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_et"
                android:drawableStart="@drawable/custom_event"
                android:drawablePadding="8dp"
                android:hint="@string/event_name"
                android:fontFamily="@font/nr"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="@+id/imageView29"
                app:layout_constraintStart_toStartOf="@+id/imageView29"
                app:layout_constraintTop_toBottomOf="@+id/t2"
                android:autofillHints="" />
            <EditText
                android:id="@+id/title"
                android:layout_width="335dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_et"
                android:drawableStart="@drawable/custom_event"
                android:drawablePadding="8dp"
                android:hint="@string/project_title"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="18dp"
                android:fontFamily="@font/nr"
                app:layout_constraintEnd_toEndOf="@+id/imageView29"
                app:layout_constraintStart_toStartOf="@+id/imageView29"
                app:layout_constraintTop_toBottomOf="@+id/event"
                android:autofillHints="" />

            <Spinner
                android:id="@+id/contest_mode"
                android:layout_width="162.5dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_et"
                android:entries="@array/Contest_mode"
                android:textSize="18dp"
                android:fontFamily="@font/nb"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/from"
                app:layout_constraintStart_toStartOf="@+id/from"
                app:layout_constraintTop_toBottomOf="@+id/from" />
            <Spinner
                android:id="@+id/prize"
                android:layout_width="162.5dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_et"
                android:entries="@array/Contest_Prize"
                android:textAlignment="center"
                android:textSize="18dp"
                android:fontFamily="@font/nb"
                app:layout_constraintEnd_toEndOf="@+id/to"
                app:layout_constraintStart_toStartOf="@+id/to"
                app:layout_constraintTop_toBottomOf="@+id/to" />


            <TextView
                android:id="@+id/to"
                android:layout_width="162.5dp"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_et"
                android:drawableStart="@drawable/custom_date"
                android:drawablePadding="8dp"
                android:hint="@string/completed_on"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="14dp"
                android:fontFamily="@font/nr"
                app:layout_constraintEnd_toEndOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:autofillHints="" />

            <TextView
                android:id="@+id/from"
                android:layout_width="162.5dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_et"
                android:drawableStart="@drawable/custom_date"
                android:drawablePadding="8dp"
                android:fontFamily="@font/nr"
                android:gravity="center"
                android:hint="@string/registered_on"
                android:textSize="14dp"
                android:inputType="date"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintStart_toStartOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:autofillHints="" />


            <EditText
                android:id="@+id/ssig"
                android:layout_width="163dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/custom_et"
                android:digits="1234567890"
                android:drawableStart="@drawable/custom_doc"
                android:drawablePadding="8dp"
                android:fontFamily="@font/nr"
                android:hint="DOC id"
                android:inputType="number"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="@+id/mail"
                app:layout_constraintTop_toBottomOf="@+id/mail" />

            <Button
                android:id="@+id/contest_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/register_buttons"
                android:text="@string/submit_details"
                android:textColor="#FFFFFF"
                android:fontFamily="@font/nb"
                android:textSize="15dp"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="@+id/imageView29"
                app:layout_constraintStart_toStartOf="@+id/imageView29"
                app:layout_constraintTop_toBottomOf="@+id/imageView29" />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/gif"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/donegif"
                app:layout_constraintBottom_toBottomOf="@+id/contest_register"
                app:layout_constraintEnd_toEndOf="@+id/contest_register"
                app:layout_constraintStart_toStartOf="@+id/contest_register"
                app:layout_constraintTop_toTopOf="@+id/contest_register" />

            <ImageView
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/tree1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contest_register"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>